--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev": "tsx src/index.ts",
     "build": "tsc",
     "start": "npx @modelcontextprotocol/inspector npx --yes -p tsx tsx src/index.ts",
-  "scrape": "tsx src/scripts/scrape.ts",
+    "scrape": "tsx src/scrape.ts",
     "test": "tsx tests/run-parser.ts",
     "startOLD": "node build/index.js"
   },
@@ -16,10 +16,11 @@
     "@epic-web/invariant": "^1.0.0",
     "@modelcontextprotocol/sdk": "^1.0.0",
     "fs": "^0.0.1-security",
+    "jsdom": "^22.1.0",
     "path": "^0.12.7",
     "playwright": "^1.57.0",
-    "zod": "^3.22.0",
-    "jsdom": "^22.1.0"
+    "undici": "^7.16.0",
+    "zod": "^3.22.0"
   },
   "devDependencies": {
     "@modelcontextprotocol/inspector": "^0.1.0",
