--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "build": "tsc",
     "start": "npx @modelcontextprotocol/inspector npx --yes -p tsx tsx src/index.ts",
     "scrape": "tsx src/scrape.ts",
-    "test": "tsx tests/run-e2e.ts"
+    "test": "jest",
+    "e2e": "tsx tests/run-e2e.ts"
   },
   "dependencies": {
     "@epic-web/invariant": "^1.0.0",
@@ -23,7 +24,10 @@
   },
   "devDependencies": {
     "@modelcontextprotocol/inspector": "^0.1.0",
+    "@types/jest": "^30.0.0",
     "@types/node": "^20.0.0",
+    "jest": "^30.2.0",
+    "ts-jest": "^29.4.6",
     "ts-node": "^10.9.2",
     "tsx": "^4.21.0",
     "typescript": "^5.0.0"
